Updated Chrome EXT

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,7 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "NISU Extension",
+  "name": "Funke AI",
   "version": "1.2",
+  "icons": {
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
   "description": "Interactive learning assistant for NotebookLM",
   "permissions": [
     "scripting",
@@ -28,11 +34,11 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "NISU Extension"
+    "default_title": "Funke AI"
   },
   "web_accessible_resources": [
     {
-      "resources": ["nisuext.png"],
+      "resources": ["funkeext.png"],
       "matches": ["https://notebooklm.google.com/*"]
     }
   ]
